Fix layout issues with bootstrap v4 and toggles.

--- a/webapp/web/style_jury.css
+++ b/webapp/web/style_jury.css
@@ -181,3 +181,22 @@ div.submissions-filter ul.token-input-list {
 div.submission-summary > span {
 	margin-right: 10px;
 }
+
+/* fixes for bootstrap-toggle and bootstrap4 */
+.toggle-off {
+	box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+.toggle.off {
+	border-color: rgba(0, 0, 0, .25);
+}
+.toggle-handle {
+	background-color: white;
+	border: thin rgba(0, 0, 0, .25) solid;
+}
+.btn-xs,
+.btn-group-xs > .btn {
+	padding: 1px 5px;
+	font-size: 12px;
+	line-height: 1.5;
+	border-radius: 3px;
+}
